# ivan

./: .gitattributes  CMakeLists.txt  Recognition.cpp  Recognition.h  dict.py  main.cpp  speaking.cpp  speaking.h
data/: test.dic  test.jsgf
data/zero_ru.cd_cont_4000/: feat.params  feature_transform  mdef  means  mixture_weights  noisedict  transition_matrices  variances
